update functions, report

--- a/report/report.tex
+++ b/report/report.tex
@@ -41,7 +41,7 @@ ece 759 project part 1
 \section{Feature Selection}
 	\subfile{sections/features}
 
-\section{Algorithmic Interpretation}
+\section{Algorithm Implementations}
 	\subfile{sections/algo_DT}
 
 \section{Code Listings}
