--- a/report/report.tex
+++ b/report/report.tex
@@ -43,6 +43,8 @@ ece 759 project part 1
 
 \section{Algorithm Implementations}
 	\subfile{sections/algo_DT}
+\section{Algorithm Implementations}
+	\subfile{sections/lda}
 
 \section{Code Listings}
 
