lda.tex changed

--- a/report/sections/lda.tex
+++ b/report/sections/lda.tex
@@ -20,3 +20,5 @@ The steps that we follow in our LDA algorithm are:
 	\item A discriminant function for each class is $f(i) = \mu_i {w_a}^{-1} {x_k}^T - \dfrac{1}{2} \mu_i {w_a}^{-1} {\mu_i}^T + ln(P_i)$ where $P_i$ is respective probabilities of each class.
 	\item Then we select a class with highest discriminant function.
 \end{enumerate}
+\subsubsection{Helpful Functions}
+To accomplish the above pseudo code, we used own created functions.  
