add results, conclusion

--- a/report/report.tex
+++ b/report/report.tex
@@ -48,6 +48,12 @@ ece 759 project part 1
 	\subfile{sections/algo_DT}
 	\subfile{sections/lda}
 
+\section{Test Results}
+	\subfile{sections/results}
+
+\section{Conclusion}
+	\subfile{sections/conclusion}
+
 %\nocite{*}
 \bibliography{../bibliography}
 \bibliographystyle{unsrt}
