--- a/bibliography.bib
+++ b/bibliography.bib
@@ -14,3 +14,11 @@
     url = "https://en.wikipedia.org/w/index.php?title=C4.5_algorithm&oldid=825055847",
     note = "[Online; accessed 14-March-2018]"
   }
+
+@misc{ matlab:fitctree,
+  author = "Mathworks",
+  title = "MATLAB Documentation - fitctree",
+  year = "2018",
+  howpublished = "https://www.mathworks.com/help/stats/fitctree.html",
+  note = "[Online; accessed 2010-09-30]"
+}
