new trees, org folders

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -19,6 +19,6 @@
   author = "Mathworks",
   title = "MATLAB Documentation - fitctree",
   year = "2018",
-  howpublished = "https://www.mathworks.com/help/stats/fitctree.html",
+  url = "https://www.mathworks.com/help/stats/fitctree.html",
   note = "[Online; accessed 2010-09-30]"
 }
