--- a/report/sections/results.tex
+++ b/report/sections/results.tex
@@ -1,5 +1,5 @@
 
-The table below illustrates the lowest classification errors we were able to achieve with our Decision Tree and LDA classifiers on the MNIST and Yale Extended B datasets. 
+The table below illustrates the lowest classification errors we were able to achieve with our Decision Tree and LDA classifiers on the MNIST and Yale Extended B datasets. For MNIST, we utilized half of the dataset for training and half for testing. However, since the Yale B dataset is so small, we were only able to get lower error rates by using $\sim$95\% of the set for training and $\sim$5\% for testing.
 
 \begin{table}[H]
   \centering
@@ -9,7 +9,7 @@ The table below illustrates the lowest classification errors we were able to ach
     \hline\hline
     LDA &  &  \\ 
     \hline
-    Decision Tree & 18.42\% & 81.16\% \\ 
+    Decision Tree & 17.42\% & 65.79\% \\ 
     \hline
   \end{tabular}
   \caption{Lowest classification errors achieved with LDA and Decision Trees.}
@@ -19,27 +19,27 @@ The table below illustrates the lowest classification errors we were able to ach
 
 \subsubsection{Decision Trees}
 
-The table below illustrates some results that we obtained during various configurations of the decision tree training algorithm. In an effort to optimize training time vs. test accuracy, we noticed some trends in the algorithm's performance. Notably, utilizing \code{minLeaf} doesn't seem to contribute to over-fitting, as was noted in other implementations \cite{matlab:fitctree}. This may be in part to the type of algorithm we are using. Particularly, the pure C4.5 algorithm moves back up the tree if certain conditions are met, thereby improving a previously-made split. This bore some extra complexity than we were able to achieve at this time, but may be responsible for a more simpler tree generation on our part.
+The table below illustrates some results that we obtained during various configurations of the decision tree training algorithm on MNIST. In an effort to optimize training time vs. test accuracy, we noticed some trends in the algorithm's performance. Notably, utilizing \code{minLeaf} doesn't seem to contribute to over-fitting, as was noted in other implementations \cite{matlab:fitctree}. This may be in part to the type of algorithm we are using. Particularly, the pure C4.5 algorithm moves back up the tree if certain conditions are met, thereby improving a previously-made split. This bore more complexity than we were able to achieve at this time, but may be responsible for a more simpler tree generation on our part. Note that for MNIST, we used half of the 70k samples for training and half for testing.
 
 \begin{table}[H]
   \centering
-  \begin{tabular}{||c | c | c | c | c | c | c | c | c | c | c | c||} 
+  \begin{tabular}{||c | c | c | c | c | c | c | c | c | c | c | c | c ||} 
     \hline
-    Training Configuration & 1 & 2 & 2 & 2 & 3 & 3 & 1 & 1 & 1 & 1 & 4 \\
+    Training Configuration & 1 & 2 & 2 & 2 & 3 & 3 & 1 & 1 & 1 & 1 & 4 & 4 \\
     \hline
-    numFeatures & 30 & 30 & 60 & 200 & 200 & 200 & 30 & 100 & 100 &  20 & 10 \\
+    numFeatures & 30 & 30 & 60 & 200 & 200 & 200 & 30 & 100 & 100 &  20 & 10 & 10 \\
     \hline
-    minLeaf & 1 & 1 & 2 & 2 & 3 & 4 & 4 & 4 & 1 & 1 & 1 \\
+    minLeaf & 1 & 1 & 2 & 2 & 3 & 4 & 4 & 4 & 1 & 1 & 1 & 3 \\
     \hline
-    Error Rate & 22 & 26 & 26 & 26 & 23 & 24 & 22.6 & 23.6 & 23.5 & 22.9 & 18.42 \\
+    Error Rate (\%) & 22 & 26 & 26 & 26 & 23 & 24 & 22.6 & 23.6 & 23.5 & 22.9 & 17.42 & 20.37 \\
     \hline
-    Mins To Train & 48 & 2 & 2 & 3 & 12 & 12 & 47 & 60 & 102 & 11 & 3 \\
+    Mins To Train & 48 & 2 & 2 & 3 & 12 & 12 & 47 & 60 & 102 & 11 & 3 & 3 \\
     \hline
   \end{tabular}
-  \caption{Hyperparameter Configuration of Decision Tree.}
+  \caption{Hyperparameter Configuration of Decision Tree for MNIST.}
 \end{table}
 
-The training configurations were primarily modifications to the algorithm's search through the feature's to find the best one to split the set on. They are as follows:
+The training configurations were primarily modifications to the algorithm's search through the features to find the best one to split the set on. They are as follows:
 
 %
 \begin{enumerate}
