rm old trees, update report

--- a/report/report.tex
+++ b/report/report.tex
@@ -70,7 +70,8 @@ ece 759 project part 1
 Below are the primary scripts that solve the project. Please see the
 \code{code} folder for supporting functions.
 
-\lstinputlisting[caption=Code for 2.35]{../code/decisionTree/main_dt_MNIST.m}
+\lstinputlisting[caption=Main Code for Decision Tree on MNIST]{../code/decisionTree/main_dt_MNIST.m}
+\lstinputlisting[caption=Main Code for Decision Tree on Yale B]{../code/decisionTree/main_dt_YaleB.m}
 
 \end{document}
 
