--- a/report/sections/algo_DT.tex
+++ b/report/sections/algo_DT.tex
@@ -90,7 +90,7 @@ The algorithm is reproduced in pseudocode below.
 \caption{trainDecisionTree} \label{alg:dt}
 \end{algorithm}
 
-\pagebreak
+%\pagebreak
 Once we have trained the decision tree, we can begin to test it by passing the features generated from the test set through the tree. The testing algorithm is reproduced in psuedocode below.
 
 \begin{algorithm}[H]
