--- a/report/sections/introduction.tex
+++ b/report/sections/introduction.tex
@@ -1,3 +1,5 @@
 In this report, we outline the process we undertook to implement two classification algorithms: linear discriminant analysis (LDA) and Decision Trees. To complete this, we experimented with two feature generation methods: principle components analysis (PCA) and LDA itself (for use in decision trees.) Throughout this document, we use the terms 'features' and 'attributes' interchangeably.
 
 After presenting an explanation of our algorithms' implementations, we will discuss our current-best results and our preliminary exploration of the hyperparameter space. The hyperparameters are adjustments that variously control the accuracy and computational complexity of our classifiers. A more thorough exploration and validation of these parameters will be presented in the next installment of the project.
+
+Code for this project is included in our project submission. In addition, it's available on GitHub at \href{https://github.com/n-casale/ece759-project}{https://github.com/n-casale/ece759-project}. The Git repository includes a more thorough representation of the path our code took to its current state. 
