add citations to images, features

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -20,5 +20,13 @@
   title = "MATLAB Documentation - fitctree",
   year = "2018",
   url = "https://www.mathworks.com/help/stats/fitctree.html",
-  note = "[Online; accessed 2010-09-30]"
+  note = "[Online; accessed 2018-03-14]"
+}
+
+@misc{ images:ldapca,
+  author = "Sebastian Raschka",
+  title = "What is the difference between LDA and PCA for dimensionality reduction?",
+  year = "2018",
+  url = "https://sebastianraschka.com/faq/docs/lda-vs-pca.html",
+  note = "[Online; accessed 2018-03-14]"
 }
