--- a/report/sections/features.tex
+++ b/report/sections/features.tex
@@ -7,17 +7,17 @@ In working with the decision trees, we utilized the SVD of each image in the tra
 
 \subsection{LDA vs PCA}
 
-LDA and PCA linearly transforms the data to reduce the dimensions. The difference is that LDA is supervised whereas PCA is unsupervised. PCA finds directions which maximize the variance along that direction and they are orthogonal to each other. We can view a PCA technique as in Figure(2.1). 
+LDA and PCA linearly transform the data to reduce the dimensions. The difference between the two techniques is that LDA is supervised whereas PCA is unsupervised. PCA finds orthogonal directions which maximize the variance, thereby expressing the data along \emph{principle components} that are the most pronounced. We can view a PCA technique as in Figure(2.1). 
 
 	\begin{figure}[H]
 		\centering\includegraphics[width=0.4\textwidth]{../images/pca}
-		\caption{PCA implemented on 2-dimensional data}
+		\caption{PCA implemented on 2-dimensional data \cite{images:ldapca}. }
 	\end{figure}
 
 LDA maximizes the class separability and can be viewed as in Figure(2.2). 
 	\begin{figure}[H]
 	\centering\includegraphics[width=0.4\textwidth]{../images/lda}
-	\caption{LDA visualization}
+	\caption{LDA visualization \cite{images:ldapca}. }
 	\end{figure}
 The underlying concept of LDA is taking the eigenvectors of $ \dfrac{\Sigma_b}{\Sigma}$ where $\Sigma$ is within-class scatter matrix and $\Sigma_b$ is between-class scatter matrix. By having this division of matrices, we separate the classes away from each other. On the other hand, since PCA is unsupervised it only tries to capture the data in minimum number of variables. 
 \subsection{LDA for MNIST and Extended YaleB}
